# django-picklefield

./: .coveragerc  .gitignore  .travis.yml  README  README.rst  pyproject.toml  runtests.sh  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: test.yml
picklefield/: __init__.py  constants.py  fields.py
src/picklefield/: compat.py  fields.py  tests.py
tests/: models.py  settings.py  tests.py
