[tool.poetry]
name = "django-picklefield"
version = "0.1.0"
description = ""
authors = ["Vithor Jaeger <vaphes@gmail.com>"]
readme = "README.md"
packages = [{ include = "picklefield" }]

[tool.poetry.dependencies]
python = ">=3.8, <4"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
